--- a/app/src/main/res/layout-land/wifi_rules.xml
+++ b/app/src/main/res/layout-land/wifi_rules.xml
@@ -13,6 +13,7 @@
         android:layout_margin="8dp"
         android:orientation="vertical">
 
+
         <Button
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -22,27 +23,17 @@
             android:contentDescription="@string/add_new_contact"
             android:onClick="onAddSendRulesButtonClicked"
             android:text="@string/new_rule"
-            android:textAppearance="@style/myButtonStyleSmall"
+            android:textAppearance="@style/myDetailTitleStyle"
             android:textColor="@color/text_color_primary" />
-
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_margin="8dp"
-            android:layout_marginStart="8dp"
-            android:layout_marginLeft="8dp"
-            android:layout_marginEnd="8dp"
-            android:layout_marginRight="8dp"
-            android:text="@string/my_rules"
-            android:textAppearance="@style/myDetailTitleStyle" />
-
 
         <android.support.v7.widget.RecyclerView
             android:id="@+id/handyrules_list_recycler_view"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_gravity="top"
-            android:layout_margin="8dp" />
+            android:layout_margin="8dp">
+
+        </android.support.v7.widget.RecyclerView>
     </LinearLayout>
 
 
