--- a/app/src/main/res/layout-v26/message.xml
+++ b/app/src/main/res/layout-v26/message.xml
@@ -1,10 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout
+<LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:orientation="vertical">
 
 
     <LinearLayout
@@ -13,7 +14,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
         android:layout_marginLeft="8dp"
-        android:layout_marginTop="8dp"
+        android:layout_marginTop="24dp"
         android:layout_marginEnd="8dp"
         android:layout_marginRight="8dp"
         android:orientation="vertical"
@@ -32,13 +33,13 @@
             android:id="@+id/messageText_editText"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:autofillHints="@string/insert"
             android:ems="10"
             android:hint="@string/hi_i_am_home"
             android:inputType="textShortMessage|textLongMessage"
             android:lines="5"
             android:maxLength="160"
-            android:minLines="2"
-            android:autofillHints="@string/insert" />
+            android:minLines="2" />
 
 
         <Button
@@ -61,16 +62,15 @@
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="217dp"
+        android:layout_height="wrap_content"
+        android:layout_margin="8dp"
         android:layout_marginStart="8dp"
         android:layout_marginLeft="8dp"
         android:layout_marginEnd="8dp"
         android:layout_marginRight="8dp"
         android:layout_marginBottom="8dp"
         android:orientation="vertical"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent">
+        android:padding="8dp">
 
         <android.support.v7.widget.RecyclerView
             android:id="@+id/texts_list_recycler_view"
@@ -85,4 +85,4 @@
 
 
 
-</android.support.constraint.ConstraintLayout>
+</LinearLayout>
